[gd_scene load_steps=8 format=3 uid="uid://bf0ba7mx66gt8"]

[ext_resource type="Script" uid="uid://crcvbp3s6hgju" path="res://scenes/game_overlay/overlay.gd" id="1_yf2sk"]
[ext_resource type="FontFile" uid="uid://cojsua2s34upb" path="res://textures/fonts/Better VCR 9.0.1.ttf" id="2_5f6ye"]
[ext_resource type="Texture2D" uid="uid://ba77csrlje8ak" path="res://textures/Money one.png" id="3_wlswc"]
[ext_resource type="Texture2D" uid="uid://d3gocrwfp01fu" path="res://textures/fb202.png" id="4_nit6v"]
[ext_resource type="Texture2D" uid="uid://b5umaxgkvylhv" path="res://textures/snowflake.png" id="5_k5oma"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k5oma"]
bg_color = Color(0.91145015, 0, 0.062886186, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6uqk8"]
bg_color = Color(0.2528629, 0.45691782, 0.7418572, 1)

[node name="GameOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yf2sk")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
theme_override_styles/fill = SubResource("StyleBoxFlat_k5oma")
show_percentage = false

[node name="WallJumpCounter" type="Label" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 58.0
offset_right = 114.0
offset_bottom = 81.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5f6ye")
text = "Wall jumps: 0"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_top = 110.0
offset_right = 154.0
offset_bottom = 193.0
texture = ExtResource("3_wlswc")
stretch_mode = 4

[node name="CoinCount" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
offset_left = 80.0
offset_top = 20.0
offset_right = 117.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("2_5f6ye")
theme_override_font_sizes/font_size = 25
text = ": 0"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = 200.0
offset_right = 154.0
offset_bottom = 253.0
texture = ExtResource("4_nit6v")
stretch_mode = 4

[node name="WoodCount" type="Label" parent="TextureRect2"]
layout_mode = 1
anchors_preset = -1
offset_left = 60.0
offset_right = 97.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("2_5f6ye")
theme_override_font_sizes/font_size = 25
text = ": 0"

[node name="ControlsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_5f6ye")
text = "Pause: ESC
Interact: E
Jump: Space
Attack: F
Dash: SHIFT
Move: WASD"

[node name="FrostBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.0
offset_top = 30.0
offset_right = 198.0
offset_bottom = 57.0
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_6uqk8")
show_percentage = false

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 30.0
offset_right = -60.0
offset_bottom = 40.0
grow_horizontal = 2
texture = ExtResource("5_k5oma")

[node name="DashLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = 100.0
offset_right = 144.0
offset_bottom = 23.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5f6ye")
text = "Dash meter: 0"
